# shopRAG

./: .dockerignore  .env.docker  .gitignore  BACKEND_QUICKSTART.md  DIGITAL_OCEAN_SETUP.md  DOCKER_README.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.ingest  Makefile  README.md  analytics.py  dashboard.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  test_rag.py
backend/api/: llm_monitoring.py  main.py  monitoring.py
backend/config/: settings.py
backend/models/: schemas.py
backend/scripts/: eda_cellphones.py  ingest_data.py  ingest_reviews.py  ingest_reviews_postgres.py
backend/services/: embedder.py  guardrails.py  llm_client.py  metrics.py  prom_metrics.py  rag_pipeline.py  retriever.py  retriever_postgres.py
backend/utils/: text_processor.py
data/: product_cache.json
frontend/: gradio_app.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: shoprag-overview.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: docker-dev.sh
